# gerritlib

./: .gitignore  .gitreview  CONTRIBUTING.rst  HACKING.rst  MANIFEST.in  README.md  README.rst  openstack-common.conf  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/source/: api.rst  conf.py  index.rst  installation.rst  usage.rst
gerritlib/: gerrit.py  version.py
gerritlib/tests/: base.py  test_gerritlib.py
