[metadata]
name = gerritlib
summary = Client library for accessing Gerrit.
description-file = README.rst
author = OpenStack Infrastructure Team
author-email = openstack-infra@lists.openstack.org
maintainer = OpenStack Infrastructure Team
maintainer-email = openstack-infra@lists.openstack.org
home-page = http://git.openstack.org/cgit/openstack-infra/gerritlib/
license = apache
classifier =
    Topic :: Utilities
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Environment :: Console
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages = gerritlib

[pbr]
warnerrors = True

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
